src/main/java/com/example/timelist/error/LectureDuplicateException.java
package com.example.timelist.error;

public class LectureDuplicateException extends RuntimeException {
    public LectureDuplicateException (String message) {
        super ( message );
    }
}
